--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,4 @@ django-allauth==0.15.0
 django-debug-toolbar==1.0.1
 https://github.com/coagulant/django-storages-py3/tarball/py3
 django-taggit
+django-comments-xtd==1.2f1
