--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,4 @@ django-taggit
 django-comments-xtd==1.2f1
 https://github.com/lambdalisue/django-permission/tarball/master
 https://github.com/malthejorgensen/django-sortable/tarball/master
+django-extensions==1.3.3
