[Update] Uglify .js-files into separate parts

--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "backbone.collectionView": "~0.8.2",
     "medium-editor": "~1.5.4",
-    "listjs": "~1.1.0"
+    "listjs": "~1.1.0",
+    "underscore": "~1.6.0"
   }
 }
