--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "grunt-uncss": "~0.1.9",
     "bower": "~1.2.8",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-bower-task": "~0.3.4"
+    "grunt-bower-task": "~0.3.4",
+    "grunt-contrib-uglify": "~0.3.2"
   }
 }
