--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,8 @@
     "backbone.collectionView": "~0.8.2",
     "medium-editor": "~1.5.4",
     "listjs": "~1.1.0",
-    "underscore": "~1.6.0"
+    "underscore": "~1.6.0",
+    "jquery-throttle-debounce": "*",
+    "offline": "~0.6.0"
   }
 }
