--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "listjs": "~1.1.0",
     "underscore": "~1.6.0",
     "jquery-throttle-debounce": "*",
-    "offline": "~0.6.0"
+    "offline": "~0.6.0",
+    "jquery-file-upload": "~9.5.6",
+    "jquery.iframe-transport": "*"
   }
 }
