--- a/requirements.txt
+++ b/requirements.txt
@@ -12,3 +12,4 @@ django-extensions==1.3.3
 https://github.com/malthejorgensen/django-solo/tarball/master
 django-sortedm2m==0.7.0
 django-inplaceedit==1.3.0
+django-embed-video==0.8
