--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
     "jquery-throttle-debounce": "*",
     "offline": "~0.6.0",
     "jquery-file-upload": "~9.5.6",
-    "jquery.iframe-transport": "*"
+    "jquery.iframe-transport": "*",
+    "jquery-autosize": "~1.18.4"
   }
 }
