--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,7 @@
   "license": "BSD 2-clause",
   "private": true,
   "devDependencies": {
-    "foundation": "5.1.1",
+    "foundation": "~5.2.1",
     "jquery-form": "3.46.0"
   },
   "resolutions": {
