--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "offline": "~0.6.0",
     "jquery-file-upload": "~9.5.6",
     "jquery.iframe-transport": "*",
-    "jquery-autosize": "~1.18.4"
+    "jquery-autosize": "~1.18.4",
+    "masonry": "~3.1.5",
   }
 }
