--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "jquery-file-upload": "~9.5.6",
     "jquery.iframe-transport": "*",
     "jquery-autosize": "~1.18.4",
-    "masonry": "~3.1.5"
+    "masonry": "~3.1.5",
+    "poshytip": "vadikom/poshytip"
   }
 }
