--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bower": "~1.2.8",
     "grunt-contrib-copy": "~0.5.0",
     "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-uglify": "~0.3.2"
+    "grunt-contrib-uglify": "~0.3.2",
+    "selenium-webdriver": "~2.41.0",
+    "mocha": "~1.18.2"
   }
 }
