--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,4 @@ django-sortedm2m==0.7.0
 django-embed-video==0.8
 django-countries==2.0
 https://github.com/malthejorgensen/django-inlinetrans/tarball/master
+git+git://github.com/AGoodId/django-s3-collectstatic.git#egg=django-s3-collectstatic
