[Update] requirements.txt: Change URLs from https:// to git://
This makes `pip` emit the message:
"Requirement already satisfied (use --upgrade to upgrade)"
instead of reinstalling the Python packages from the git repositories
every time we run `pip install -r requirements.txt`.

--- a/requirements.txt
+++ b/requirements.txt
@@ -4,14 +4,14 @@ Pillow==2.3.0
 South==0.8.4
 django-allauth==0.15.0
 django-debug-toolbar==1.0.1
-https://github.com/coagulant/django-storages-py3/tarball/py3
+git+git://github.com/coagulant/django-storages-py3.git#egg=django-storages
 django-comments-xtd==1.2f1
-https://github.com/lambdalisue/django-permission/tarball/master
-https://github.com/malthejorgensen/django-sortable/tarball/master
+git+git://github.com/lambdalisue/django-permission.git#egg=django-permission
+git+git://github.com/malthejorgensen/django-sortable.git#egg=django-sortable
 django-extensions==1.3.3
-https://github.com/malthejorgensen/django-solo/tarball/master
+git+git://github.com/malthejorgensen/django-solo.git#egg=django-solo
 django-sortedm2m==0.7.0
 django-embed-video==0.8
 django-countries==2.0
-https://github.com/malthejorgensen/django-inlinetrans/tarball/master
+git+git://github.com/malthejorgensen/django-inlinetrans.git#egg=django-inlinetrans
 git+git://github.com/AGoodId/django-s3-collectstatic.git#egg=django-s3-collectstatic
