--- a/.gitignore
+++ b/.gitignore
@@ -6,9 +6,9 @@ __pycache__
 /static
 /migrations
 
-# Ignoring configuration files.
-global_change_lab/settings_s3.py
-global_change_lab/settings_production.py
+# Ignoring configuration files - no need to do this any more, as they are now encrypted.
+#global_change_lab/settings_s3.py
+#global_change_lab/settings_production.py
 
 # ignore generated .css and .js files
 global_change_lab/static/global_change_lab/css
@@ -30,3 +30,4 @@ database.sqlite3
 
 # who needs this anyway?!
 # global_change_lab/static/
+
