--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,4 @@ django-embed-video==0.8
 django-countries==2.0
 git+git://github.com/malthejorgensen/django-inlinetrans.git#egg=django-inlinetrans
 git+git://github.com/AGoodId/django-s3-collectstatic.git#egg=django-s3-collectstatic
+selenium==2.43.0
