--- a/requirements.txt
+++ b/requirements.txt
@@ -19,3 +19,5 @@ django-countries==2.0
 git+git://github.com/malthejorgensen/django-inlinetrans.git#egg=django-inlinetrans
 git+git://github.com/AGoodId/django-s3-collectstatic.git#egg=django-s3-collectstatic
 selenium==2.43.0
+scipy==0.14.0
+numpy==1.9.0
